# rusty-calc

./: Cargo.toml  README.md  build.rs  deps.txt
.cargo/: config.toml
boards/rp2040/: config.toml  memory.x
boards/rp2350/: config.toml  memory.x
boards/simulator/: config.toml
slint_generated/: Cargo.toml  build.rs
slint_generated/src/: lib.rs
src/: controller.rs  lib.rs  main.rs  slint_backend.rs
src/picocalc/: hardware.rs  mod.rs  pico_backend.rs  pico_test_ai.rs
src/picocalc/display/: mod.rs  st7365p.rs  st7365p_async.rs  st7365p_orig.rs
src/picocalc/southbridge/: keyboard.rs  mod.rs  southbridge.rs
src/picocalc/spi/: exclusive_device.rs  mod.rs
src/simulator/: hardware.rs  mod.rs  slint_backend.rs
ui/: common.slint  main.slint
