[package]
name = "rusty-calc"
version = "0.1.0"
edition = "2024"


[dependencies]
slint = { version = "1.12.1", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "renderer-software", "libm"] }
slint-generated = { path = "./slint_generated" }

defmt = { version = "1.0", optional = true, features = ["alloc"] }
defmt-rtt = { version = "1.0", optional = true }
panic-probe = { version = "1.0", optional = true, features = ["print-defmt"] }
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
embassy-executor = { version = "0.8.0", features = ["executor-thread"] }
embassy-time = { version = "0.4.0" }
embassy-sync = { version = "0.7.0" }
tinybmp = { version = "0.6" }
static_cell = { version = "2" }
embedded-alloc = { version = "0.6", optional = true }
embedded-hal-bus = { version = "0.3.0", features = ["async"], optional = true }
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

embassy-rp = { version = "0.4.0", features = [
    "critical-section-impl",
    "unstable-pac",
    "time-driver",
    "binary-info",
], optional = true }

env_logger = { version = "0.11.8", optional = true }
sdl2 = { version = "0.38.0", optional = true }
object-pool = { version = "0.6.0", optional = true }

st7365p-lcd = { git = "https://github.com/pedja1/ST7365P-lcd-rs.git", branch = "async", optional = true}


[features]
pico = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "cortex-m",
    "cortex-m-rt",
    "st7365p-lcd",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-executor/arch-cortex-m",
    "embassy-executor/executor-interrupt",
    "embassy-executor/defmt",
    "embedded-alloc",
    "embedded-hal",
    "embedded-hal-async",
    "embedded-hal-bus",
    "embassy-rp",
    "embassy-rp/rp2040"
]

picow = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "cortex-m",
    "cortex-m-rt",
    "st7365p-lcd",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-executor/arch-cortex-m",
    "embassy-executor/executor-interrupt",
    "embassy-executor/defmt",
    "embedded-alloc",
    "embedded-hal",
    "embedded-hal-async",
    "embedded-hal-bus",
    "embassy-rp",
    "embassy-rp/rp2040"
]

pico2 = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "cortex-m",
    "cortex-m-rt",
    "st7365p-lcd",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-executor/arch-cortex-m",
    "embassy-executor/executor-interrupt",
    "embassy-executor/defmt",
    "embedded-alloc",
    "embedded-hal",
    "embedded-hal-async",
    "embedded-hal-bus",
    "embassy-rp",
    "embassy-rp/rp235xb"
]

pico2w = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "cortex-m",
    "cortex-m-rt",
    "st7365p-lcd",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-executor/arch-cortex-m",
    "embassy-executor/executor-interrupt",
    "embassy-executor/defmt",
    "embedded-alloc",
    "embedded-hal",
    "embedded-hal-async",
    "embedded-hal-bus",
    "embassy-rp",
    "embassy-rp/rp235xb"
]

simulator = [
    "slint/renderer-software",
    "slint/backend-winit",
    "slint/std",
    "embassy-executor/arch-std",
    "embassy-time/std",
    "env_logger",
    "sdl2",
    "object-pool",
]

[build-dependencies]
cfg-if = "1.0.1"

[[bin]]
name = "ui_simulator"
required-features = ["simulator"]